[gd_scene load_steps=3 format=3 uid="uid://c7dqgt81y1fs1"]

[ext_resource type="Script" path="res://scripts/upgrade_window.gd" id="1_dy344"]
[ext_resource type="Texture2D" uid="uid://oyxockdwh1or" path="res://icon.svg" id="1_l48e1"]

[node name="UpgradeWindow" type="CanvasLayer" node_paths=PackedStringArray("reach_label", "leap_label", "stamina_label", "grip_label", "ability_label")]
process_mode = 3
script = ExtResource("1_dy344")
reach_label = NodePath("Panel/MarginContainer/GridContainer/TextureButton/Label2")
upgrade_increase_reach_range = 40
max_upgrade_reach_range = 10
leap_label = NodePath("Panel/MarginContainer/GridContainer/TextureButton2/Label3")
upgrade_increase_leap_speed = 30
max_upgrade_leap_speed = 5
stamina_label = NodePath("Panel/MarginContainer/GridContainer/TextureButton3/Label4")
upgrade_increase_stamina = 10
max_upgrade_stamina = 10
grip_label = NodePath("Panel/MarginContainer/GridContainer/TextureButton4/Label5")
upgrade_increase_grip_strength = 5
max_upgrade_grip_strength = 2
ability_label = NodePath("Panel/MarginContainer/GridContainer2/TextureButton5/Label6")
upgrade_increase_ability_uses = 1
max_upgrade_ability_uses = 2

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -184.0
offset_right = 149.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = -156.0
offset_right = 102.5
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
columns = 2

[node name="TextureButton" type="TextureButton" parent="Panel/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("1_l48e1")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="Panel/MarginContainer/GridContainer/TextureButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.5
offset_right = 46.5
offset_bottom = 26.0
grow_horizontal = 2
text = "reach range"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel/MarginContainer/GridContainer/TextureButton"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="Panel/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture_normal = ExtResource("1_l48e1")
ignore_texture_size = true
stretch_mode = 5

[node name="Label2" type="Label" parent="Panel/MarginContainer/GridContainer/TextureButton2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_right = 42.0
offset_bottom = 26.0
grow_horizontal = 2
text = "leap speed"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Panel/MarginContainer/GridContainer/TextureButton2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton3" type="TextureButton" parent="Panel/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture_normal = ExtResource("1_l48e1")
ignore_texture_size = true
stretch_mode = 5

[node name="Label3" type="Label" parent="Panel/MarginContainer/GridContainer/TextureButton3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.5
offset_right = 31.5
offset_bottom = 26.0
grow_horizontal = 2
text = "stamina"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Panel/MarginContainer/GridContainer/TextureButton3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton4" type="TextureButton" parent="Panel/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture_normal = ExtResource("1_l48e1")
ignore_texture_size = true
stretch_mode = 5

[node name="Label4" type="Label" parent="Panel/MarginContainer/GridContainer/TextureButton4"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.5
offset_right = 50.5
offset_bottom = 26.0
grow_horizontal = 2
text = "grip strength"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Panel/MarginContainer/GridContainer/TextureButton4"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TextureButton5" type="TextureButton" parent="Panel/MarginContainer/GridContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
texture_normal = ExtResource("1_l48e1")
ignore_texture_size = true
stretch_mode = 5

[node name="Label5" type="Label" parent="Panel/MarginContainer/GridContainer2/TextureButton5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_right = 43.5
offset_bottom = 26.0
grow_horizontal = 2
text = "ability uses"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="Panel/MarginContainer/GridContainer2/TextureButton5"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/MarginContainer/GridContainer/TextureButton" to="." method="upgrade_reach_range"]
[connection signal="pressed" from="Panel/MarginContainer/GridContainer/TextureButton2" to="." method="upgrade_leap_speed"]
[connection signal="pressed" from="Panel/MarginContainer/GridContainer/TextureButton3" to="." method="upgrade_stamina"]
[connection signal="pressed" from="Panel/MarginContainer/GridContainer/TextureButton4" to="." method="upgrade_grip_strength"]
[connection signal="pressed" from="Panel/MarginContainer/GridContainer2/TextureButton5" to="." method="upgrade_power_uses"]
